vlib/v/checker/tests/if_expr_last_branch_stmt_err.vv
fn main() {
	val := 15
	mut start := 0

	start = if val < 20 { start += 1 } else { start }
	dump(start)
}
